Selection of DX call country added.

--- a/Web Page/style/style.css
+++ b/Web Page/style/style.css
@@ -207,5 +207,14 @@ width:50opx;
     font-size: 16px;
     color: #1f1b1b;
 }
+#dxcallcountry {
+    width: 80px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #faf7f7;
+    font-size: 16px;
+    color: #1f1b1b;
+}
 </style>
 
