--- a/Web Page/style/style.css
+++ b/Web Page/style/style.css
@@ -1,7 +1,7 @@
 html, body {
-	margin: 3;
-   	padding: 3;
-	width: 95%;
+	margin: 0;
+   	padding: 0;
+	width: 100%;
 	height: 100%; 
     background-color: #ebf4f9;
    
@@ -73,6 +73,41 @@ float:left;
 width:50opx;
 }
 
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+}
+
+.Menu #menu {
+  display: none;
+}
+
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 33px;
+  display: block;
+}
+
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: #04AA6D;
+  color: white;
+}
 
 
 #Server {
